@@ -2,11 +2,13 @@ package dev.amir.userquery;
 
 import dev.amir.userquery.framework.output.sql.entity.UserJpa;
 import dev.amir.userquery.framework.output.sql.repository.UserJpaRepository;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
+import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -14,6 +16,11 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
+import static dev.amir.userquery.util.DefaultObject.defaultUserId;
+import static dev.amir.userquery.util.DefaultObject.defaultUserId2;
+import static dev.amir.userquery.util.DefaultObject.defaultUserJpa;
+import static dev.amir.userquery.util.DefaultObject.defaultUserJpa2;
+import static org.hamcrest.Matchers.hasSize;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -40,44 +47,38 @@ public class UserQueryTest {
 
     @Test
     void test_GetAllUsers() throws Exception {
-        List<UserJpa> mockUsers = Arrays.asList(
-                new UserJpa() {{
-                    setId("1");
-                    setName("kevin");
-                }},
-                new UserJpa() {{
-                    setId("2");
-                    setName("john");
-                }}
-        );
-
+        List<UserJpa> mockUsers = List.of(defaultUserJpa, defaultUserJpa2);
         when(userJpaRepositoryMock.findAll()).thenReturn(mockUsers);
 
         mockMvc.perform(get("/users").contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.users[0].name").value("kevin"))
-                .andExpect(jsonPath("$.users[1].name").value("john"))
-                .andExpect(jsonPath("$.users[0].id").value("1"))
-                .andExpect(jsonPath("$.users[1].id").value("2"));
+                .andExpect(jsonPath("$.users").value(hasSize(2)))
+                .andExpect(jsonPath("$.users[0].id").value(defaultUserId))
+                .andExpect(jsonPath("$.users[0].name").value(defaultUserJpa.getName()))
+                .andExpect(jsonPath("$.users[0].lastname").value(defaultUserJpa.getLastname()))
+                .andExpect(jsonPath("$.users[0].status").value(defaultUserJpa.getStatus().name()))
+                .andExpect(jsonPath("$.users[1].id").value(defaultUserId2))
+                .andExpect(jsonPath("$.users[1].name").value(defaultUserJpa2.getName()))
+                .andExpect(jsonPath("$.users[1].lastname").value(defaultUserJpa2.getLastname()))
+                .andExpect(jsonPath("$.users[1].status").value(defaultUserJpa2.getStatus().name()));
 
         verify(userJpaRepositoryMock).findAll();
     }
 
-    @Test
-    public void test_GetUsersById() throws Exception {
-        UserJpa mockUser = new UserJpa();
-        String expectedUuid = UUID.randomUUID().toString();
-        mockUser.setName("kevin");
-        mockUser.setId(expectedUuid);
-        when(userJpaRepositoryMock.findById(any(String.class))).thenReturn(Optional.of(mockUser));
+    @ParameterizedTest
+    @MethodSource("dataProvider_getUserById")
+    public void test_GetUserById(String userId, UserJpa userJpa) throws Exception {
+        when(userJpaRepositoryMock.findById(any(String.class))).thenReturn(Optional.of(userJpa));
 
-        mockMvc.perform(get("/users/{userId}", expectedUuid)
+        mockMvc.perform(get("/users/{userId}", userId)
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.user.name").value("kevin"))
-                .andExpect(jsonPath("$.user.id").value(expectedUuid))
+                .andExpect(jsonPath("$.user.name").value(userJpa.getName()))
+                .andExpect(jsonPath("$.user.lastname").value(userJpa.getLastname()))
+                .andExpect(jsonPath("$.user.status").value(userJpa.getStatus().name()))
+                .andExpect(jsonPath("$.user.id").value(userId))
                 .andExpect(status().isOk());
 
-        verify(userJpaRepositoryMock).findById(eq(expectedUuid));
+        verify(userJpaRepositoryMock).findById(eq(userId));
     }
 
     @Test
@@ -94,14 +95,20 @@ public class UserQueryTest {
 
     @Test
     public void test_HandleUserNotFoundException_ForGetUserById() throws Exception {
-        String expectedUuid = UUID.randomUUID().toString();
         when(userJpaRepositoryMock.findById(any(String.class))).thenReturn(Optional.empty());
 
-        mockMvc.perform(get("/users/{userId}", expectedUuid)
+        mockMvc.perform(get("/users/{userId}", defaultUserId)
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound())
                 .andExpect(content().string("User not found"));
 
-        verify(userJpaRepositoryMock).findById(eq(expectedUuid));
+        verify(userJpaRepositoryMock).findById(eq(defaultUserId));
+    }
+
+    private static Stream<Arguments> dataProvider_getUserById() {
+        return Stream.of(
+                Arguments.of(defaultUserId, defaultUserJpa),
+                Arguments.of(defaultUserId2, defaultUserJpa2)
+        );
     }
 }
